--- a/integration-manifest.json
+++ b/integration-manifest.json
@@ -7,6 +7,8 @@
   "link_github": false,
   "about": {
     "orchestrator": {
+      "UOFramework": "10.1",
+      "pam_support": true,
       "win": {
         "supportsCreateStore": false,
         "supportsDiscovery": false,
