--- a/integration-manifest.json
+++ b/integration-manifest.json
@@ -5,8 +5,11 @@
   "status": "production",
   "description": "The IBM DataPower Orchestrator allows for the management of certificates in the IBM Datapower platform. Inventory, Add and Remove functions are supported. This integration can add/replace certificates in any domain\\directory combination. ",
   "link_github": false,
+  "update_catalog": false,
   "about": {
     "orchestrator": {
+      "UOFramework": "10.1",
+      "pam_support": true,
       "win": {
         "supportsCreateStore": false,
         "supportsDiscovery": false,
