--- a/integration-manifest.json
+++ b/integration-manifest.json
@@ -4,8 +4,8 @@
   "name": "DataPower Orchestrator",
   "status": "production",
   "description": "The IBM DataPower Orchestrator allows for the management of certificates in the IBM Datapower platform. Inventory, Add and Remove functions are supported. This integration can add/replace certificates in any domain\\directory combination. ",
-  "link_github": false,
-  "update_catalog": false,
+  "link_github": true,
+  "update_catalog": true,
   "about": {
     "orchestrator": {
       "UOFramework": "10.1",
