--- a/integration-manifest.json
+++ b/integration-manifest.json
@@ -3,13 +3,20 @@
   "integration_type": "orchestrator",
   "name": "DataPower Orchestrator",
   "status": "production",
+  "update_catalog": true,
+  "link_github": true,
+  "support_level": "kf-supported",
+  "release_project": "DataPower/DataPower.csproj",
+  "release_dir": "DataPower/bin/Release",
   "description": "The IBM DataPower Orchestrator allows for the management of certificates in the IBM Datapower platform. Inventory, Add and Remove functions are supported. This integration can add/replace certificates in any domain\\directory combination. ",
   "link_github": false,
   "update_catalog": false,
   "about": {
     "orchestrator": {
-      "UOFramework": "10.1",
+      "UOFramework": "10.4",
+      "keyfactor_platform_version": "10.4",
       "pam_support": true,
+      "keyfactor_platform_version": "10.4",
       "win": {
         "supportsCreateStore": false,
         "supportsDiscovery": false,
@@ -27,7 +34,109 @@
         "supportsReenrollment": false,
         "supportsInventory": true,
         "platformSupport": "Unused"
-      }
+      },
+      "store_types": [
+        {
+          "Name": "FortiWeb",
+          "ShortName": "FortiWeb",
+          "Capability": "FortiWeb",
+          "LocalStore": false,
+          "SupportedOperations": {
+            "Add": true,
+            "Create": false,
+            "Discovery": false,
+            "Enrollment": false,
+            "Remove": false
+          },
+          "Properties": [
+            {
+              "Name": "ServerUsername",
+              "DisplayName": "Server Username",
+              "Type": "Secret",
+              "DependsOn": "",
+              "DefaultValue": "",
+              "Required": false,
+              "IsPAMEligible": true,
+              "Description": "Api UserName for DataPower. (or valid PAM key if the username is stored in a KF Command configured PAM integration)."
+            },
+            {
+              "Name": "ServerPassword",
+              "DisplayName": "Server Password",
+              "Type": "Secret",
+              "DependsOn": "",
+              "DefaultValue": "",
+              "Required": false,
+              "IsPAMEligible": true,
+              "Description": "A password for DataPower API access.  Used for inventory.(or valid PAM key if the password is stored in a KF Command configured PAM integration)."
+            },
+            {
+              "Name": "ServerUseSsl",
+              "DisplayName": "Use SSL",
+              "Type": "Bool",
+              "DependsOn": "",
+              "DefaultValue": "true",
+              "Required": true,
+              "Description": "Should be true, http is not supported."
+            },
+            {
+              "Name": "InventoryBlackList",
+              "DisplayName": "Inventory Black List",
+              "Type": "String",
+              "DependsOn": "",
+              "DefaultValue": "",
+              "Required": false,
+              "IsPAMEligible": false,
+              "Description": "Comma seperated list of alias values you do not want to inventory from DataPower."
+            },
+            {
+              "Name": "Protocol",
+              "DisplayName": "Protocol Name",
+              "Type": "String",
+              "DependsOn": "",
+              "DefaultValue": "https",
+              "Required": true,
+              "IsPAMEligible": false,
+              "Description": "Comma seperated list of alias values you do not want to inventory from DataPower."
+            },
+            {
+              "Name": "PublicCertStoreName",
+              "DisplayName": "Public Cert Store Name",
+              "Type": "String",
+              "DependsOn": "",
+              "DefaultValue": "pubcert",
+              "Required": true,
+              "IsPAMEligible": false,
+              "Description": "This probably will remain pubcert unless someone changed the default name in DataPower."
+            },
+            {
+              "Name": "InventoryPageSize",
+              "DisplayName": "Inventory Page Size",
+              "Type": "String",
+              "DependsOn": "",
+              "DefaultValue": "100",
+              "Required": true,
+              "IsPAMEligible": false,
+              "Description": "This determines the page size during the inventory calls. (100 should be fine)."
+            }
+          ],
+          "EntryParameters": [],
+          "ClientMachineDescription": "The Client Machine field should contain the IP or Domain name and Port Needed for REST API Access.  For SSH Access, Port 22 will be used.",
+          "StorePathDescription": "The Store Path field should always be / unless we later determine there are alternate locations needed.",
+          "PasswordOptions": {
+            "EntrySupported": false,
+            "StoreRequired": false,
+            "Style": "Default"
+          },
+          "PrivateKeyAllowed": "Optional",
+          "JobProperties": [
+
+          ],
+          "ServerRequired": true,
+          "PowerShell": false,
+          "BlueprintAllowed": false,
+          "CustomAliasAllowed": "Required"
+        }
+      ]
     }
   }
 }
